scrollbar fixedd

--- a/src/css/BetsContainer.css
+++ b/src/css/BetsContainer.css
@@ -39,7 +39,7 @@
   margin-bottom: 1.0rem;
   height: 100%;
   padding-bottom: 10px;
-  padding-right: 2px;
+  padding-right: 5px;
 }
 
 .bets__content::-webkit-scrollbar {
@@ -52,6 +52,8 @@
 
 .bets__content::-webkit-scrollbar-thumb {
   background: var(--violet6);
+  outline: none;
+  background-clip: padding-box;
 }
 
 .bets__content::-webkit-scrollbar-thumb:hover {
